# dynetan

./: .gitignore  .readthedocs.yml  INSTALL.md  INSTALL.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: github-actions-ci.yml
docs/: README.rst  requirements.txt
docs/source/: Citing.rst  Installation.rst  Introduction.rst  Reference.rst  Tutorial.rst  Usage.rst  conf.py  index.rst
dynetan/: __init__.py  contact.py  datastorage.py  gencor.py  network.py  proctraj.py  toolkit.py  viz.py
dynetan/vizmod/: community_RGB_colors.csv  network_color.tcl  network_menu.tcl  network_rep.tcl
src/dynetan/: __init__.py  contact.py  datastorage.py  gencor.py  network.py  proctraj.py  toolkit.py  viz.py
src/dynetan/vizmod/: network_proc.tcl  network_view_2.tcl
tests/: conftest.py  test_contact.py  test_data_storage.py  test_package.py  test_proctraj.py  test_proctraj_cartesian.py  test_proctraj_checksys_selectsys.py  test_proctraj_contacts.py  test_proctraj_corr.py  test_proctraj_graph.py  test_proctraj_interface.py  test_proctraj_prepareNetwork.py  test_proctraj_set_get.py  test_toolkit.py  test_viz.py
tests/test_data/NonCanonical/: clip.psf
