[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynetan"
authors = [
  { name="Marcelo C. R. Melo", email="melomcr@gmail.com" },
]

dynamic = ["version"]

description = "A Python implementation for Dynamical Network Analysis."
readme = {"file" = "README.md", "content-type" = "text/markdown"}

requires-python = ">=3.9"
dependencies = [
"MDAnalysis",
"SciPy",
"NumPy",
"pandas",
"networkx",
"numba",
"cython",
"h5py",
"python-louvain",
"tqdm",
"colorama"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/melomcr/dynetan"
"Bug Tracker" = "https://github.com/melomcr/dynetan/issues"

[tool.hatch.version]
path = "src/dynetan/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "INSTALL.md"
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "flake8",
  "mypy",
  "tox"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--cov=dynetan",
    "--cov-report=term-missing"
#    "--cov-report=html"
]
# Individual warnings filters are specified as a sequence of fields separated by colons:
# action:message:category:module:line
# https://docs.python.org/3/library/warnings.html#describing-warning-filters
filterwarnings = [
    "error",  #converts all warnings to errors
    "ignore:.*numpy.ndarray size changed.*:RuntimeWarning",
#    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:.*np.MachAr.* is deprecated:DeprecationWarning'
]

